--- a/css/main.css
+++ b/css/main.css
@@ -52,25 +52,36 @@ div{
 }
 
 /*барабан*/
-#wheel{
+#wheelWrap{
     height: 100%;
     width: min-content;
     margin: auto;
 }
 
-#wheel img{
+#spin{
+    height: 100%;
+    border: none;
+    background-color: unset;
+}
+
+#wheelWrap img{
     height: 100%;
 }
 
+/*колесо*/
+
+/*#wheel{*/
+/*    width: max-content;*/
+/*}*/
+
 /*стрелка*/
-#arrow{
-    width: 0;
-    height: 0;
-    border-top: 50px solid transparent;
-    border-right: 100px solid red;
-    border-bottom: 50px solid transparent;
-    position: absolute;
-    left: 75%;
-}
+/*#arrow{*/
+/*    width: 0;*/
+/*    height: 0;*/
+/*    border-top: 25px solid transparent;*/
+/*    border-right: 50px solid red;*/
+/*    border-bottom: 25px solid transparent;*/
+
+/*}*/
 
 
