--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,7 @@ div{
 }
 
 #leftField, #rightField{
-    display: inline-block;
-    /*float: left;*/
+    float: left;
     height: 100%;
 }
 
@@ -32,10 +31,17 @@ div{
 
 #questionWrap, #scoresWrap{
     height: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #wordWrap{
     height: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #gameWrap{
@@ -53,21 +59,37 @@ div{
 
 /*барабан*/
 #wheelWrap{
-    height: 100%;
-    width: min-content;
+    /*height: 100%;*/
+    /*width: min-content;*/
+    width: 50%;
     margin: auto;
 }
 
 #spin{
-    height: 100%;
+    /*height: 100%;*/
+    width: 100%;
     border: none;
     background-color: unset;
 }
 
 #wheelWrap img{
-    height: 100%;
+    /*height: 100%;*/
+    width: 100%;
+
 }
 
+/*анимация барабана*/
+.spinWheel{
+    animation: spin 3s ease;
+}
+@keyframes spin {
+    from{
+        rotate: 0;
+    }
+    to{
+        rotate: calc(360deg*2);
+    }
+}
 /*колесо*/
 
 /*#wheel{*/
@@ -83,5 +105,8 @@ div{
 /*    border-bottom: 25px solid transparent;*/
 
 /*}*/
+
+
+
 
 
