--- a/css/main.css
+++ b/css/main.css
@@ -45,11 +45,13 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 100;
 }
 
 #gameWrap{
     height: 65%;
     position: relative;
+
 }
 
 #hostWrap{
@@ -59,6 +61,10 @@ body{
 
 #prizesWrap, #giftsWrap{
     height: 25%;
+}
+
+#guessLetter, #submitLetter{
+    z-index: 100;
 }
 
 /*барабан*/
@@ -76,12 +82,14 @@ body{
     border: none;
     background-color: unset;
     cursor: pointer;
+    transform: rotate(var(--currentDeg));
+    z-index: 0;
 }
 
 #spin img{
     /*height: 100%;*/
     width: 100%;
-
+    z-index: 0;
 }
 
 #spin:disabled{
@@ -92,12 +100,18 @@ body{
 .spinWheel{
     animation: spin 1.5s ease;
 }
+
+:root{
+    --spinDeg: 0deg;
+    --currentDeg: 0deg;
+}
+
 @keyframes spin {
     from{
         rotate: 0;
     }
     to{
-        rotate: calc(360deg*2);
+        rotate: calc(var(--spinDeg));
     }
 }
 /*колесо*/
